--- a/_config.yml
+++ b/_config.yml
@@ -1,23 +1,23 @@
-title:            So Simple Theme
-description:      A simple and clean responsive Jekyll theme for words and photos.
+title:            Disinhibits
+description:      Amusings from Bastian and Kristin.
 logo:             site-logo.png
 disqus_shortname: sosimpletheme
 search:           true
 #Comment out url when working locally to resolve base urls correctly
-url:              http://mmistakes.github.io/so-simple-theme
+url:              http://dropawesome.github.io/disinhibits
 
 # Owner/author information
 owner:
-  name:           Michael Rose
+  name:           Kristin
   avatar:         michael-rose-photo.jpg
   email:          michael@mademistakes.com
   # Social networking links used in footer. Update and remove as you like.
-  twitter:        "mmistakes"
-  facebook:       "michaelrose"
-  github:         "mmistakes"
-  linkedin:       "michaelrose"
-  instagram:      "mmistakes"
-  tumblr:         "mademistakes"
+  twitter:        
+  facebook:       "kristin.herper"
+  github:         "dropawesome"
+  linkedin:       
+  instagram:      
+  tumblr:         
   stackexchange:  
   flickr:                 
   # For Google Authorship https://plus.google.com/authorship
@@ -43,7 +43,7 @@ links:
     external: true
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-timezone:    America/New_York
+timezone:    Europe/Berlin
 future:      true
 pygments:    true
 markdown:    kramdown
